fix state after delete and wrap words

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4485,7 +4485,8 @@ a.thumbnail.active {
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: #fff;
-  border: 1px solid #ddd; }
+  border: 1px solid #ddd; 
+	word-wrap: break-word;}
   .list-group-item:first-child {
     border-top-right-radius: 4px;
     border-top-left-radius: 4px; }
